# mpc_stabilizer

./: CMakeLists.txt  mpc_stabilizer.kdev4
.kdev4/: mpc_stabilizer.kdev4
MATLAB_scripts/: KalmanMatrices.m  KalmanTuningExt.m  LIMPMatrices.m  MATLAB_scripts.kdev4  MPCCodeGeneration.m  MPCTuningExt.m  MPC_tuning.m  MPC_tuning.m~  Signals.m  kalman  kalman.slx  kalman.slx.original  untitled
MATLAB_scripts/.kdev4/: MATLAB_scripts.kdev4
MATLAB_scripts/codegen/dll/mpcmoveCodeGeneration/: .mpcmoveCodeGeneration.cpp.kate-swp  abs.h  mpcblock_optimizer.cpp  mpcblock_optimizer.h  mpcmoveCodeGeneration.h  mpcmoveCodeGeneration_initialize.cpp  mpcmoveCodeGeneration_terminate.cpp  mpcmoveCodeGeneration_terminate.h  norm.h  qpkwik.cpp  qpkwik.h  qr.cpp  repmat.cpp  repmat.h  rtGetInf.cpp  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rtw_proj.tmw  rtwtypes.h  xgemv.cpp  xgemv.h  xgeqrf.cpp
MATLAB_scripts/codegen/dll/mpcmoveCodeGeneration/examples/: main.h
MATLAB_scripts/codegen/dll/mpcmoveCodeGeneration/interface/: _coder_mpcmoveCodeGeneration_info.c  _coder_mpcmoveCodeGeneration_info.h  _coder_mpcmoveCodeGeneration_mex.h
MATLAB_scripts/slprj/grt/KalmanFilter/tmwinternal/: CompileInfo.xml  binfo.mat  minfo.mat
MATLAB_scripts/slprj/grt/MpcController/tmwinternal/: CompileInfo.xml  binfo.mat  minfo.mat
MATLAB_scripts/slprj/grt/_sharedutils/: shared_file.dmr  tflSUInfo.mat
MPCPlugin/: CMakeLists.txt  README.md
MPCPlugin/include/MPCPlugin/: MPCPlugin_plugin.h
MPCPlugin/src/: MPCPlugin_plugin.cpp
MpcController_grt_rtw/: MpcController.cpp  MpcController.h  MpcController.mk  MpcController_data.cpp  MpcController_private.h  MpcController_types.h  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
MpcController_grt_rtw/html/: MpcController_codegen_rpt.html  MpcController_contents.html  MpcController_cpp.html  MpcController_data_cpp.html  MpcController_h.html  MpcController_interface.html  MpcController_private_h.html  MpcController_subsystems.html  MpcController_survey.html  MpcController_types_h.html  define.js  multiword_types_h.html  rtGetInf_cpp.html  rtGetInf_h.html  rtGetNaN_cpp.html  rtGetNaN_h.html  rt_nonfinite_cpp.html  rt_nonfinite_h.html  rtmodel_h.html  rtwtypes_h.html
codegen/dll/mpcmoveCodeGeneration/: abs.cpp  buildInfo.mat  codeInfo.mat  mpcmoveCodeGeneration.cpp  mpcmoveCodeGeneration.def  mpcmoveCodeGeneration_initialize.h  mpcmoveCodeGeneration_rtw.mk  mpcmoveCodeGeneration_types.h  norm.cpp  qr.h  rtGetInf.h  rt_nonfinite.h  xgeqrf.h  xger.cpp  xger.h  xnrm2.cpp  xnrm2.h
codegen/dll/mpcmoveCodeGeneration/examples/: main.cpp
codegen/dll/mpcmoveCodeGeneration/interface/: _coder_mpcmoveCodeGeneration_api.c  _coder_mpcmoveCodeGeneration_api.h  _coder_mpcmoveCodeGeneration_mex.cpp
include/mpc_stabilizer/: MpcStabilizer.h
src/: MpcStabilizer.cpp  mpc_test.cpp
(+4 files in other folders)
